--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.4.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.influxdb</groupId>
+                <artifactId>influxdb-java</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>1.16</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.spockframework</groupId>
