moved influx repository to own artifact as it will be used by both the importer and the server

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>repository</module>
         <module>import</module>
     </modules>
 
