--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -10,28 +10,18 @@
     </parent>
 
     <groupId>com.github.slotties.gw2trades</groupId>
-    <artifactId>gw2trades-import</artifactId>
+    <artifactId>gw2trades-repository</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.slotties.gw2trades</groupId>
-            <artifactId>gw2trades-repository</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <dependency>
