--- a/pom.xml
+++ b/pom.xml
@@ -76,18 +76,21 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>1.16</version>
             </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.4</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-core</artifactId>
                 <version>1.0-groovy-2.4</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
                 <version>3.1</version>
-                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
