--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.4.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.4.1</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.spockframework</groupId>
