--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 repo.fs.dir=data
+
+spring.velocity.properties.file.resource.loader.cache=false
+spring.velocity.properties.file.resource.loader.path=server/src/main/resources/templates
