added velocity toolbox

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 repo.fs.dir=data
 
+spring.velocity.toolbox-config-location=toolbox.xml
+
 spring.velocity.properties.file.resource.loader.cache=false
 spring.velocity.properties.file.resource.loader.path=server/src/main/resources/templates
