--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.velocity.toolbox-config-location=toolbox.xml
 
 spring.velocity.properties.file.resource.loader.cache=false
 spring.velocity.properties.file.resource.loader.path=server/src/main/resources/templates
+spring.velocity.properties.velocimacro.library=templates/macros.vm
