--- a/server/build.gradle
+++ b/server/build.gradle
@@ -14,6 +14,11 @@ buildscript {
 
 apply plugin: 'spring-boot'
 
+configurations {
+    // We use log4j2 over commons-logging/slf4j/logback:
+    compile.exclude module: 'spring-boot-starter-logging'
+}
+
 dependencies {
     compile project(':repository')
 
@@ -23,8 +28,10 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.4.1'
     compile 'org.apache.logging.log4j:log4j-core:2.4.1'
     compile 'org.springframework.boot:spring-boot-starter:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-velocity:1.2.7.RELEASE'
-    compile 'org.spockframework:spock-core:1.0-groovy-2.4'
-    compile 'cglib:cglib-nodep:3.1'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-velocity'
+    compile 'org.springframework.boot:spring-boot-starter-log4j2'
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib-nodep:3.1'
 }
