--- a/import/src/main/resources/import.yaml
+++ b/import/src/main/resources/import.yaml
@@ -1,8 +1,6 @@
-influxdb:
-  user: root
-  pass: root
-  url: http://127.0.0.1:8086
-  dbName: gw2trades
+importer:
+  chunkSize: 50
+  threads: 64
 
 filesystem:
   dir: data
