--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-velocity'
     compile 'org.springframework.boot:spring-boot-starter-log4j2'
+    compile 'org.springframework.boot:spring-boot-starter-actuator'
 
     testCompile "org.codehaus.groovy:groovy-all:2.4.1"
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
