--- a/import/src/main/resources/import.yaml
+++ b/import/src/main/resources/import.yaml
@@ -2,5 +2,11 @@ importer:
   chunkSize: 50
   threads: 64
 
-filesystem:
+influxdb:
+  user: root
+  pass: root
+  url: http://127.0.0.1:8086
+  dbName: gw2trades
+
+index:
   dir: data
