--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     compile 'org.influxdb:influxdb-java:2.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.6'
+    compile 'org.apache.lucene:lucene-core:5.3.1'
+    compile 'org.apache.lucene:lucene-analyzers-common:5.3.1'
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testCompile 'commons-io:commons-io:2.4'
