ongoing influx/lucene migration

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # Production profile
-repo.fs.dir=data
+index.dir=data
+influx.user=root
+influx.pass=root
+influx.url=http://127.0.0.1:8086
 
 spring.velocity.toolbox-config-location=toolbox.xml
 spring.velocity.properties.velocimacro.library=templates/macros.vm
