--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
     group = 'com.github.slotties.gw2trades'
-    version = '0.1-SNAPSHOT'
+    version = '1.1'
 }
 
 def javaLangLevel = 1.8
