--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,7 +8,29 @@ buildscript {
     }
 
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE'
+        classpath 'com.eriwen:gradle-css-plugin:1.11.1'
+    }
+}
+
+apply plugin: 'css'
+css.source {
+    dev {
+        css {
+            srcDir 'src/main/resources/static/less'
+            include "*.less"
+        }
+    }
+}
+lesscss {
+    source = css.source.dev.css.files
+    dest = 'src/main/resources/static/css'
+}
+minifyCss {
+    source = lesscss
+    dest = "${buildDir}/resources/main/static/css/styles.css"
+    yuicompressor {
+        lineBreakPos = -1
     }
 }
 
@@ -36,3 +58,5 @@ dependencies {
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
     testRuntime 'cglib:cglib-nodep:3.1'
 }
+
+tasks.jar.dependsOn(minifyCss)
