removed X-Application-Context header

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,3 +6,4 @@ influx.url=http://127.0.0.1:8086
 
 spring.velocity.toolbox-config-location=toolbox.xml
 spring.velocity.properties.velocimacro.library=templates/macros.vm
+management.add-application-context-header=false
