--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Production profile
-index.dir=data
+index.dir.items=data/items
+index.dir.recipes=data/recipes
 influx.user=root
 influx.pass=root
 influx.url=http://127.0.0.1:8086
