--- a/server/build.gradle
+++ b/server/build.gradle
@@ -74,6 +74,7 @@ dependencies {
 
     compile 'com.fasterxml.jackson.core:jackson-core:2.7.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.0'
     compile 'org.apache.logging.log4j:log4j-api:2.5'
     compile 'org.apache.logging.log4j:log4j-core:2.5'
     compile 'org.springframework.boot:spring-boot-starter:1.3.2.RELEASE'
