integrated less plugin

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,6 +25,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.lesscss</groupId>
+                <artifactId>lesscss-maven-plugin</artifactId>
+                <version>1.7.0.1.1</version>
+                <configuration>
+                    <sourceDirectory>${project.basedir}/src/main/resources/static/less</sourceDirectory>
+                    <outputDirectory>${project.basedir}/src/main/resources/static/css</outputDirectory>
+                    <compress>true</compress>
+                    <includes>
+                        <include>styles.less</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
