--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
                 <artifactId>commons-lang</artifactId>
                 <version>2.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>1.7</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.spockframework</groupId>
