--- a/server/pom.xml
+++ b/server/pom.xml
@@ -82,6 +82,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.github.slotties.gw2trades</groupId>
