--- a/server/pom.xml
+++ b/server/pom.xml
@@ -86,6 +86,10 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+        </dependency>
 
 
         <dependency>
