fixed scope of spock dependency

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-core</artifactId>
                 <version>1.0-groovy-2.4</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>cglib</groupId>
