--- a/server/src/main/resources/application.json
+++ b/server/src/main/resources/application.json
@@ -1,6 +1,6 @@
 {
-  "index.dir.items": "data/items",
-  "index.dir.recipes": "data/recipes",
+  "index.dir.items": "../data/items",
+  "index.dir.recipes": "../data/recipes",
   "influx.user": "root",
   "influx.pass": "root",
   "influx.url": "http://127.0.0.1:8086",
